--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -8,5 +8,5 @@
         "strict": true,
         "target": "es6"
     },
-    "exclude": ["node_modules", ".git"]
+    "exclude": ["node_modules"]
 }
