--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,18 +3,20 @@
     "private": true,
     "scripts": {
         "compile": "tsc -p .",
-        "test": "npm run compile && node dist/back-end/src/index.js",
+        "test": "npm run compile && node dist/back-end/src/index.js patterns/patterns.json",
         "test-parsing": "npm run compile && node dist/back-end/src/statement-parsing/parsing.js"
     },
     "dependencies": {
         "chokidar": "^3.3.1",
+        "cors": "^2.8.5",
         "express": "4.x",
-        "statement-parser": "^1.2.2",
+        "statement-parser": "^1.3.1",
         "ws": "7.x"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.6",
         "@types/express": "4.x",
-        "@types/node": "13.x",
+        "@types/node": "^13.7.1",
         "@types/ws": "7.x",
         "typescript": "3.x"
     }
