Stub out account check list, add BaseElement

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -6,7 +6,7 @@
         "noImplicitReturns": true,
         "rootDir": "./",
         "strict": true,
-        "target": "es6"
+        "target": "ES2016"
     },
     "exclude": ["node_modules"]
 }
