--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "cSpell.words": ["pdfs"],
-    "editor.rulers": [100]
+    "editor.rulers": [100],
+    "[html]": {"editor.defaultFormatter": "esbenp.prettier-vscode"},
+    "[javascript]": {"editor.defaultFormatter": "esbenp.prettier-vscode"},
+    "[json]": {"editor.defaultFormatter": "esbenp.prettier-vscode"},
+    "[jsonc]": {"editor.defaultFormatter": "esbenp.prettier-vscode"},
+    "[typescript]": {"editor.defaultFormatter": "esbenp.prettier-vscode"},
+    "editor.formatOnSave": true
 }
