run with a single command
update README
update styles
update config location, add example

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     ],
     "scripts": {
         "format": "prettier --write './{,!(dist)/**/}*.+(ts|json|html)'",
-        "start": "zwitterion --port 8000 --spa-root front-end/index.html",
+        "start-frontend": "zwitterion --port 8000 --spa-root front-end/index.html",
+        "start-backend": "cd back-end && npm run start",
+        "start": "./scripts/run-both.sh",
         "test": "insulate"
     },
     "dependencies": {
