--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,22 +3,22 @@
     "private": true,
     "scripts": {
         "compile": "tsc -p .",
-        "test": "ts-node src/index.ts patterns/patterns.json",
+        "start": "ts-node src/index.ts patterns/patterns.json",
         "test-parsing": "npm run compile && node dist/back-end/src/statement-parsing/parsing.js"
     },
     "dependencies": {
-        "chokidar": "^3.3.1",
+        "chokidar": "^3.4.2",
         "cors": "^2.8.5",
         "express": "4.x",
-        "statement-parser": "^1.3.1",
+        "statement-parser": "^1.3.4",
         "ts-node": "^8.10.2",
-        "ws": "7.x"
+        "ws": "^7.3.1"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.6",
-        "@types/express": "4.x",
-        "@types/node": "^13.7.1",
-        "@types/ws": "7.x",
-        "typescript": "3.x"
+        "@types/cors": "^2.8.7",
+        "@types/express": "^4.17.8",
+        "@types/node": "^13.13.19",
+        "@types/ws": "^7.2.6",
+        "typescript": "^3.9.7"
     }
 }
